--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>H</header>
+
+    <main>M</main>
+    
+    <footer>F</footer>
     
 </body>
 </html>
