--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>H</header>
+    <header>
+        <div class="container"></div>
+    </header>
 
-    <main>M</main>
-    
-    <footer>F</footer>
+    <main>
+        <div class="container"></div>
+    </main>
+
+    <footer>
+        <div class="container"></div>
+    </footer>
     
 </body>
 </html>
