--- a/index.html
+++ b/index.html
@@ -9,11 +9,21 @@
 </head>
 <body>
     <header>
-        <div class="container"></div>
+        <div class="container">
+            <nav>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
-        <div class="container"></div>
+        <div class="container">
+            <div class="box"></div>
+        </div>
     </main>
 
     <footer>
