--- a/index.html
+++ b/index.html
@@ -12,17 +12,48 @@
         <div class="container">
             <nav>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Donna</li>
+                    <li>Uomo</li>
+                    <li>Bambini</li>
                 </ul>
             </nav>
+            <div class="logo">Logo</div>
+            <div class="cart">
+                <ul>
+                    <li>Accedi</li>
+                    <li>Love</li>
+                    <li>Cart</li>
+                </ul>
+            </div>
         </div>
     </header>
 
     <main>
         <div class="container">
-            <div class="box"></div>
+
+            <div class="card uno">
+                <div> <img src="img/1.webp" alt="foto1"> </div>
+            </div>
+            
+            <div class="card due">
+                <div> <img src="img/2.webp" alt="foto2"> </div>
+            </div>
+
+            <div class="card tre">
+                <div> <img src="img/3.webp" alt="foto3"> </div>
+            </div>
+
+            <div class="card quattro">
+                <div> <img src="img/4.webp" alt="foto4"> </div>
+            </div>
+
+            <div class="card cinque">
+                <div> <img src="img/5.webp" alt="foto5"> </div>
+            </div>
+
+            <div class="card sei">
+                <div> <img src="img/6.webp" alt="foto6"> </div>
+            </div>
         </div>
     </main>
 
