--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boolando</title>
     <link rel="stylesheet" href="style.css">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css' integrity='sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==' crossorigin='anonymous'/>
+
 </head>
 <body>
     <header>
@@ -17,7 +19,7 @@
                     <li>Bambini</li>
                 </ul>
             </nav>
-            <div class="logo">Logo</div>
+            <img class="logo" src="img/boolean-logo.png" alt="logo">
             <div class="cart">
                 <ul>
                     <li>Accedi</li>
@@ -33,32 +35,112 @@
 
             <div class="card uno">
                 <div> <img src="img/1.webp" alt="foto1"> </div>
+                <div class="white"><i class="fa-solid fa-heart"></i></div>
+                <div class="red">-50%</div>
+                <div class="green">Sostenibilità</div>
+
+                <div class="etichetta">
+                    <div class="tag tag-uno">Levi's</div>
+                    <div class="descrizione">RELAXED FIT TEE UNISEX</div>
+                    <div class="prezzi">
+                        <span class="price">14,99€</span>
+                        <span class="old-price">29,99€</span>
+                    </div> 
+                </div>
             </div>
             
             <div class="card due">
-                <div> <img src="img/2.webp" alt="foto2"> </div>
+                <div> 
+                    <img src="img/2.webp" alt="foto2"> 
+                    <div class="white"><i class="fa-solid fa-heart"></i></div>
+                    <div class="red">-30%</div>
+                    <div class="etichetta">
+                        <div class="tag tag-uno">Guess</div>
+                        <div class="descrizione">ROSES TEE</div>
+                        <div class="prezzi">
+                            <span class="price">20,99€</span>
+                            <span class="old-price">29,99€</span>
+                        </div> 
+                    </div>
+                </div>
             </div>
 
             <div class="card tre">
                 <div> <img src="img/3.webp" alt="foto3"> </div>
+                <div class="white"><i class="fa-solid fa-heart"></i></div>
+                <div class="red">-30%</div>
+                <div class="etichetta">
+                    <div class="tag tag-uno">Come Zucchero Filato</div>
+                    <div class="descrizione">VOGLIA DI COLORI PASTELLO</div>
+                    <div class="prezzi">
+                        <span class="price">129,99€</span>
+                        <span class="old-price"> 184,99€</span>
+                    </div> 
+                </div>
             </div>
 
             <div class="card quattro">
                 <div> <img src="img/4.webp" alt="foto4"> </div>
+                <div class="white"><i class="fa-solid fa-heart"></i></div>
+                <div class="red">-50%</div>
+                <div class="green">Sostenibilità</div>
+                <div class="etichetta">
+                    <div class="tag">Levi's</div>
+                    <div class="descrizione">TEE UNISEX</div>
+                    <div class="prezzi">
+                        <span class="price">14,99€</span>
+                        <span class="old-price"> 29,99€</span>
+                    </div> 
+                </div>
             </div>
 
             <div class="card cinque">
                 <div> <img src="img/5.webp" alt="foto5"> </div>
+                <div class="white"><i class="fa-solid fa-heart"></i></div>
+                <div class="etichetta">
+                    <div class="tag">Maya Deluxe</div>
+                    <div class="descrizione">STRIPE BODICE</div>
+                    <div class="prezzi">
+                        <span class="price">99,99€</span>
+                        <!-- <span class="old-price"> 29,99€</span> -->
+                    </div> 
+                </div>
             </div>
 
             <div class="card sei">
                 <div> <img src="img/6.webp" alt="foto6"> </div>
+                <div class="white"><i class="fa-solid fa-heart"></i></div>
+                <div class="green last">Sostenibilità</div>
+                <div class="etichetta">
+                    <div class="tag tag-uno">Espirit</div>
+                    <div class="descrizione">MAGLIONE - BLACK</div>
+                    <div class="prezzi">
+                        <span class="price">29,99€</span>
+                    </div> 
+                </div>
             </div>
         </div>
     </main>
 
     <footer>
-        <div class="container"></div>
+        <div class="container">
+            <div class="footer-left">
+                <ul>
+                    <li>Boolando s.r.l</li>
+                    <li>
+                        <span>Informazioni legali</span>
+                        <span>Informativa sulla privacy</span>
+                        <span>Diritto di recesso</span>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-right">
+                <ul>
+                    <li>Trovaci anche su</li>
+                    <li>Icone Social</li>
+                </ul>
+            </div>
+        </div>
     </footer>
     
 </body>
